add JWT Authentication , registertion and login functions

--- a/Frontend/Spotify Clone/index.html
+++ b/Frontend/Spotify Clone/index.html
@@ -127,10 +127,10 @@
         <div class="navbar">
           <ul>
             <li>
-              <a href="#">Sign Up</a>
+              <a href="SignUp.html">Sign Up</a>
             </li>
           </ul>
-          <button type="button">Log In</button>
+          <button type="button"><a href="Login.html">Log in</a></button>
         </div>
       </div>
 
