added artsits (login , Registeration , Active account)

--- a/Frontend/Spotify Clone/SignUp.html
+++ b/Frontend/Spotify Clone/SignUp.html
@@ -51,11 +51,11 @@
             <span class="email-error"></span>
             <label>Password</label>
             <input type="password" placeholder="Password" id="password" />
-            <span class="Password-error"
+            <!-- <span id="PasswordError"
               >Password must be at least 8 characters long and contain at least
               1 upper case letter, 1 number, and one of these special
               characters: !"#$%&'()*+,-./:;<=>?@[\]^_`{|}~
-            </span>
+            </span> -->
             <label>Username</label>
             <input type="text" placeholder="Username" id="username" />
             <span class="username-error"></span>
