add (add song , add album and update user ui after log in)

--- a/Frontend/Spotify Clone/artist/ArtistLogin.html
+++ b/Frontend/Spotify Clone/artist/ArtistLogin.html
@@ -18,7 +18,7 @@
     <!-- Stylesheets -->
     <link rel="stylesheet" href="styles/preflight.css" />
     <link rel="stylesheet" href="styles/global.css" />
-    <link rel="stylesheet" href="styles/artistlogin.css" />
+    <link rel="stylesheet" href="style/artistlogin.css" />
   </head>
   <body>
     <header>
@@ -78,6 +78,6 @@
         <span>Privacy Policy</span> and <span> Terms of Service</span> apply.
       </p>
     </footer>
-    <script src="./scripts/artistLogin.js"></script>
+    <script src="./script/artistLogin.js"></script>
   </body>
 </html>
