--- a/Frontend/Spotify Clone/artist/changepassword.html
+++ b/Frontend/Spotify Clone/artist/changepassword.html
@@ -16,7 +16,7 @@
     <!-- Stylesheets -->
     <link rel="stylesheet" href="styles/preflight.css" />
     <link rel="stylesheet" href="styles/global.css" />
-    <link rel="stylesheet" href="styles/changepassword.css" />
+    <link rel="stylesheet" href="style/changepassword.css" />
   </head>
   <body>
     <header>
@@ -64,6 +64,6 @@
         <span>Privacy Policy</span> and <span> Terms of Service</span> apply.
       </p>
     </footer>
-    <script src="/scripts/changepassword.js"></script>
+    <script src="/script/changepassword.js"></script>
   </body>
 </html>
