add (artist dashboard ) fix (artist controller functions)

--- a/Frontend/Spotify Clone/artist/ArtistLogin.html
+++ b/Frontend/Spotify Clone/artist/ArtistLogin.html
@@ -7,7 +7,7 @@
     <title>Artist Login - Spotify</title>
     <link
       rel="shortcut icon"
-      href="assets/icons/LogosSpotifyIcon.svg"
+      href="../assets/icons/LogosSpotifyIcon.svg"
       type="image/x-icon"
     />
 
@@ -16,15 +16,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="styles/preflight.css" />
-    <link rel="stylesheet" href="styles/global.css" />
+    <link rel="stylesheet" href="../styles/preflight.css" />
+    <link rel="stylesheet" href="../styles/global.css" />
     <link rel="stylesheet" href="style/artistlogin.css" />
   </head>
   <body>
     <header>
       <div class="logo">
         <a href="index.html">
-          <img src="assets/icons/LogosSpotifyIcon.svg" alt="" />
+          <img src="../assets/icons/LogosSpotifyIcon.svg" alt="" />
         </a>
       </div>
     </header>
@@ -34,15 +34,15 @@
 
         <div class="account-connect">
           <button class="a-c-btn" id="googlebtn">
-            <img src="assets/icons/google.png" alt="" />
+            <img src="../assets/icons/google.png" alt="" />
             <span>Continue with Google</span>
           </button>
           <button class="a-c-btn" id="facebookbtn">
-            <img src="assets/icons/facebook.png" alt="" />
+            <img src="../assets/icons/facebook.png" alt="" />
             <span>Continue with Facebook</span>
           </button>
           <button class="a-c-btn" id="applebtn">
-            <img src="assets/icons/apple.png" alt="" />
+            <img src="../assets/icons/apple.png" alt="" />
             <span>Continue with Apple</span>
           </button>
         </div>
@@ -78,6 +78,6 @@
         <span>Privacy Policy</span> and <span> Terms of Service</span> apply.
       </p>
     </footer>
-    <script src="./script/artistLogin.js"></script>
+    <script src="/artist/script/artistLogin.js"></script>
   </body>
 </html>
