--- a/Frontend/Spotify Clone/artist/changepassword.html
+++ b/Frontend/Spotify Clone/artist/changepassword.html
@@ -6,7 +6,7 @@
     <title>Artist Registration - Spotify</title>
     <link
       rel="shortcut icon"
-      href="assets/icons/LogosSpotifyIcon.svg"
+      href="../assets/icons/LogosSpotifyIcon.svg"
       type="image/x-icon"
     />
     <!-- Google font links -->
@@ -14,15 +14,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="styles/preflight.css" />
-    <link rel="stylesheet" href="styles/global.css" />
+    <link rel="stylesheet" href="../styles/preflight.css" />
+    <link rel="stylesheet" href="../styles/global.css" />
     <link rel="stylesheet" href="style/changepassword.css" />
   </head>
   <body>
     <header>
       <div class="logo">
         <a href="#">
-          <img src="assets/icons/LogosSpotifyIcon.svg" alt="" />
+          <img src="../assets/icons/LogosSpotifyIcon.svg" alt="" />
         </a>
       </div>
     </header>
@@ -64,6 +64,6 @@
         <span>Privacy Policy</span> and <span> Terms of Service</span> apply.
       </p>
     </footer>
-    <script src="/script/changepassword.js"></script>
+    <script src="/artist/script/changepassword.js"></script>
   </body>
 </html>
