user controller and add(user playlist , songs to playlist , show all playlist and songs )

--- a/Frontend/Spotify Clone/index.html
+++ b/Frontend/Spotify Clone/index.html
@@ -65,16 +65,31 @@
             <i class="fa-solid fa-plus"></i>
           </li>
           <li>
-            <div class="sidebar-scroll">
-              <div class="create-playlist">
+            <div class="sidebar-scroll" >
+              <div class="create-playlist"  >
                 <h4>Create Your Playlist</h4>
                 <p>it's easy , we'll help you</p>
-                <button>create Playlist</button>
+                <button id="createPlaylist">create Playlist
+                </button>
+                <div class="hint-container" >
+                  <div class="hint">
+                    <h2>create Playlist</h2>
+                    <p>Log in to create and share playlists.</p>
+                    <div class="buttons">
+                      <button id="notnow">
+                        <a href="/">not now</a>
+                      </button>
+                      <button id="login">
+                        <a href="/Login.html">log in</a>
+                      </button>
+                    </div>
+                  </div>
+                </div>
               </div>
               <div class="create-playlist">
-                <h4>Create Your Playlist</h4>
-                <p>it's easy , we'll help you</p>
-                <button>create Playlist</button>
+                <h4>Let's find some podcasts to follow</h4>
+                <p>We'll keep you updated on new episodes</p>
+                <button>Browse podcasts</button>
               </div>
             </div>
           </li>
