--- a/Frontend/Spotify Clone/index2.html
+++ b/Frontend/Spotify Clone/index2.html
@@ -69,52 +69,54 @@
               <div class="create-playlist">
                 <h4>Create Your Playlist</h4>
                 <p>it's easy , we'll help you</p>
-                <button>create Playlist</button>
+                <button id="createPlaylist">create Playlist</button>
+                <div class="hint-container">
+                  <div class="hint">
+                    <h2>create Playlist</h2>
+                    <form action="" id="playlistForm">
+                      <label>Playlist Name</label>
+                      <input
+                        type="text"
+                        placeholder="e.g Sad Rap"
+                        id="playlistname"
+                      />
+                      <div class="buttons">
+
+                        <button type="submit" id="addplaylist">
+                          Add Playlist
+                        </button>
+                      </div>
+                    </form>
+                  </div>
+                </div>
               </div>
               <div class="create-playlist">
-                <h4>Create Your Playlist</h4>
-                <p>it's easy , we'll help you</p>
-                <button>create Playlist</button>
+                <h4>All Playlists</h4>
+                <p>Show All Playlist</p>
+                <button id="showAllPlaylists">Show All</button>
               </div>
+            </div>
+          </li>
+          <li>
+            <div class="sidebar-scroll">
+              <ul id="playlists" class="container-playlist">
+                <div class="playlist-container">
+                  <div class="image">
+                    <img src="/assets/icons/LogosSpotifyIcon.svg" alt="">
+                  </div>
+                  <div class="playlist-info">
+                    <p id="playlistName">last peace <span id="count">(4)</span></p>
+                    <p class="creator-info">playlist <span id="playlistCreator">aminabdo</span> </p>
+                    
+                  </div>
+                </div>
+              </ul>
             </div>
           </li>
         </ul>
       </div>
 
-      <div class="privacy">
-        <ul>
-          <li>
-            <a href="">legal</a>
-          </li>
-          <li>
-            <a href="">Safety&Privacy Center</a>
-          </li>
-          <li>
-            <a href="">Privacy Policy</a>
-          </li>
-        </ul>
-        <ul>
-          <li>
-            <a href="">Cookies</a>
-          </li>
-          <li>
-            <a href="">About Ads</a>
-          </li>
-          <li>
-            <a href="">Accessibility</a>
-          </li>
-        </ul>
-      </div>
-      <div class="policies">
-        <ul>
-          <li>
-            <a href="#">Cookies</a>
-          </li>
-          <li>
-            <a href="#">Privacy</a>
-          </li>
-        </ul>
-      </div>
+      
     </div>
 
     <div class="main-container">
