update user interface and show all features in index page

--- a/Frontend/Spotify Clone/index.html
+++ b/Frontend/Spotify Clone/index.html
@@ -65,13 +65,12 @@
             <i class="fa-solid fa-plus"></i>
           </li>
           <li>
-            <div class="sidebar-scroll" >
-              <div class="create-playlist"  >
+            <div class="sidebar-scroll">
+              <div class="create-playlist">
                 <h4>Create Your Playlist</h4>
                 <p>it's easy , we'll help you</p>
-                <button id="createPlaylist">create Playlist
-                </button>
-                <div class="hint-container" >
+                <button id="createPlaylist">create Playlist</button>
+                <div class="hint-container">
                   <div class="hint">
                     <h2>create Playlist</h2>
                     <p>Log in to create and share playlists.</p>
@@ -148,11 +147,109 @@
           <button type="button"><a href="Login.html">Log in</a></button>
         </div>
       </div>
+      <div class="spotify-playlists Popular-artists">
+        <div class="title">
+          <h2>Popular Artists</h2>
+          <button id="showAll1">show all</button>
+        </div>
 
-      <div class="spotify-playlists">
-        <h2>Spotify Playlists</h2>
+        <div class="list" id="Popular-artists">
+          <a
+            class="item artist-card"
+            data-artist="amin"
+            data-artist-pic="/assets/images/the last peace of art3.jpg "
+            href="./artist.html"
+          >
+            <img
+              id="artistImage"
+              class="artist-image"
+              src="assets/images/the last peace of art.png"
+            />
+            <div class="play">
+              <span class="fa fa-play"></span>
+            </div>
+            <h4 class="artist-title" id="artistName">marwan pablo</h4>
+            <p>Artist.</p>
+          </a>
 
-        <div class="list">
+          <a
+            class="item artist-card"
+            data-artist="amin"
+            data-artist-pic="/assets/images/the last peace of art3.jpg "
+            href="./artist.html"
+          >
+            <img
+              id="artistImage"
+              class="artist-image"
+              src="assets/images/the last peace of art.png"
+            />
+            <div class="play">
+              <span class="fa fa-play"></span>
+            </div>
+            <h4 class="artist-title" id="artistName">marwan pablo</h4>
+            <p>Artist.</p>
+          </a>
+          <a
+            class="item artist-card"
+            data-artist="amin"
+            data-artist-pic="/assets/images/the last peace of art3.jpg "
+            href="./artist.html"
+          >
+            <img
+              id="artistImage"
+              class="artist-image"
+              src="assets/images/the last peace of art.png"
+            />
+            <div class="play">
+              <span class="fa fa-play"></span>
+            </div>
+            <h4 class="artist-title" id="artistName">marwan pablo</h4>
+            <p>Artist.</p>
+          </a>
+          <a
+            class="item artist-card"
+            data-artist="amin"
+            data-artist-pic="/assets/images/the last peace of art3.jpg "
+            href="./artist.html"
+          >
+            <img
+              id="artistImage"
+              class="artist-image"
+              src="assets/images/the last peace of art.png"
+            />
+            <div class="play">
+              <span class="fa fa-play"></span>
+            </div>
+            <h4 class="artist-title" id="artistName">marwan pablo</h4>
+            <p>Artist.</p>
+          </a>
+          <a
+            class="item artist-card"
+            data-artist="amin"
+            data-artist-pic="/assets/images/the last peace of art3.jpg "
+            href="./artist.html"
+          >
+            <img
+              id="artistImage"
+              class="artist-image"
+              src="assets/images/the last peace of art2.png"
+            />
+            <div class="play">
+              <span class="fa fa-play"></span>
+            </div>
+            <h4 class="artist-title" id="artistName">marwan pablo</h4>
+            <p>Artist.</p>
+          </a>
+        </div>
+      </div>
+
+      <div class="spotify-playlists Popular-Albums">
+        <div class="title">
+          <h2>Spotify Albums</h2>
+          <button id="showAll2">show all</button>
+        </div>
+
+        <div class="list" id="Popular-Albums">
           <a
             class="item album-card"
             data-artist="amin"
@@ -166,8 +263,8 @@
             <div class="play">
               <span class="fa fa-play"></span>
             </div>
-            <h4 class="album-title">Today's Top Hits</h4>
-            <p>Rema & Selena Gomez are on top of the...</p>
+            <h4 class="album-title" id="album-name">Today's Top Hits</h4>
+            <p id="album-creator">Rema & Selena Gomez are on top of the...</p>
           </a>
 
           <a class="item album-card" href="./album.html">
@@ -198,15 +295,6 @@
           </div>
 
           <div class="item">
-            <img src="assets/images/item-2.jpg" />
-            <div class="play">
-              <span class="fa fa-play"></span>
-            </div>
-            <h4>Chill Hits</h4>
-            <p>Kick back to the best new and recent chill...</p>
-          </div>
-
-          <div class="item">
             <img src="assets/images/item-3.jpg" />
             <div class="play">
               <span class="fa fa-play"></span>
@@ -217,146 +305,122 @@
         </div>
       </div>
 
-      <div class="spotify-playlists">
-        <h2>Focus</h2>
-        <div class="list">
-          <div class="item">
-            <img src="assets/images/item-6.jpg" />
-            <div class="play">
-              <span class="fa fa-play"></span>
-            </div>
-            <h4>Peaceful Piano</h4>
-            <p>Relax and indulge with beautiful piano pieces</p>
-          </div>
-
-          <div class="item">
-            <img
-              src="https://i.scdn.co/image/ab67616d0000b2733b5e11ca1b063583df9492db"
-            />
-            <div class="play">
-              <span class="fa fa-play"></span>
-            </div>
-            <h4>Deep Focus</h4>
-            <p>Keep calm and focus with ambient and pos...</p>
-          </div>
-
-          <div class="item">
-            <img
-              src="https://i.scdn.co/image/ab67616d0000b2733b5e11ca1b063583df9492db"
-            />
-            <div class="play">
-              <span class="fa fa-play"></span>
-            </div>
-            <h4>Instrumental Study</h4>
-            <p>Focus with soft study music in the...</p>
-          </div>
-
-          <div class="item">
-            <img
-              src="https://i.scdn.co/image/ab67616d0000b2733b5e11ca1b063583df9492db"
-            />
-            <div class="play">
-              <span class="fa fa-play"></span>
-            </div>
-            <h4>chill lofi study beats</h4>
-            <p>The perfect study beats, twenty four...</p>
-          </div>
-
-          <div class="item">
-            <img
-              src="https://i.scdn.co/image/ab67616d0000b2733b5e11ca1b063583df9492db"
-            />
-            <div class="play">
-              <span class="fa fa-play"></span>
-            </div>
-            <h4>Coding Mode</h4>
-            <p>Dedicated to all the programmers out there.</p>
-          </div>
-
-          <div class="item">
-            <img
-              src="https://i.scdn.co/image/ab67616d0000b2733b5e11ca1b063583df9492db"
-            />
-            <div class="play">
-              <span class="fa fa-play"></span>
-            </div>
-            <h4>Focus Flow</h4>
-            <p>Uptempo instrumental hip hop beats.</p>
-          </div>
+      <div class="spotify-playlists Popular-Playlist">
+        <div class="title">
+          <h2>Spotify Playlists</h2>
+          <button id="showAll3">show all</button>
         </div>
-      </div>
-
-      <div class="spotify-playlists">
-        <h2>Mood</h2>
-        <div class="list">
-          <div class="item">
+        <div class="list" id="Popular-Playlist">
+          <a
+            class="item playlist-card"
+            data-playlist-name="sad rap"
+            data-playlist-creator="amin"
+            data-playlist-pic="/assets/images/the last peace of art3.jpg  "
+            href="./playlistBeforeLogin.html"
+          >
             <img
-              src="https://i.scdn.co/image/ab67616d0000b2733b5e11ca1b063583df9492db"
+              class="playlist-image"
+              src="assets/images/the last peace of art.png"
             />
             <div class="play">
               <span class="fa fa-play"></span>
             </div>
-            <h4>Dark & Stormy</h4>
-            <p>Beautifully dark, dramatic tracks.</p>
-          </div>
+            <h4 class="album-title" id="playlist-name">
+              Today's Top Hits <span id="count"></span>
+            </h4>
+            <p id="playlist-creator">
+              Rema & Selena Gomez are on top of the...
+            </p>
+          </a>
 
-          <div class="item">
+          <a
+            class="item playlist-card"
+            data-playlist-name="sad rap"
+            data-playlist-creator="amin"
+            data-playlist-pic="/assets/images/the last peace of art3.jpg  "
+            href="./playlistBeforeLogin.html"
+          >
             <img
-              src="https://i.scdn.co/image/ab67616d0000b2733b5e11ca1b063583df9492db"
+              class="playlist-image"
+              src="assets/images/the last peace of art.png"
             />
             <div class="play">
               <span class="fa fa-play"></span>
             </div>
-            <h4>Feel Good Piano</h4>
-            <p>Happy vibes for an upbeat morning.</p>
-          </div>
+            <h4 class="album-title" id="playlist-name">
+              Today's Top Hits <span id="count"></span>
+            </h4>
+            <p id="playlist-creator">
+              Rema & Selena Gomez are on top of the...
+            </p>
+          </a>
 
-          <div class="item">
+          <a
+            class="item playlist-card"
+            data-playlist-name="sad rap"
+            data-playlist-creator="amin"
+            data-playlist-pic="/assets/images/the last peace of art3.jpg  "
+            href="./playlistBeforeLogin.html"
+          >
             <img
-              src="https://i.scdn.co/image/ab67616d0000b2733b5e11ca1b063583df9492db"
+              class="playlist-image"
+              src="assets/images/the last peace of art.png"
             />
             <div class="play">
               <span class="fa fa-play"></span>
             </div>
-            <h4>Feelin' Myself</h4>
-            <p>The hip-hop playlist that's a whole mood...</p>
-          </div>
+            <h4 class="album-title" id="playlist-name">
+              Today's Top Hits <span id="count"></span>
+            </h4>
+            <p id="playlist-creator">
+              Rema & Selena Gomez are on top of the...
+            </p>
+          </a>
 
-          <div class="item">
+          <a
+            class="item playlist-card"
+            data-playlist-name="sad rap"
+            data-playlist-creator="amin"
+            data-playlist-pic="/assets/images/the last peace of art3.jpg  "
+            href="./playlistBeforeLogin.html"
+          >
             <img
-              src="https://i.scdn.co/image/ab67616d0000b2733b5e11ca1b063583df9492db"
+              class="playlist-image"
+              src="assets/images/the last peace of art.png"
             />
             <div class="play">
               <span class="fa fa-play"></span>
             </div>
-            <h4>Chill Tracks</h4>
-            <p>Softer kinda dance</p>
-          </div>
+            <h4 class="album-title" id="playlist-name">
+              Today's Top Hits <span id="count"></span>
+            </h4>
+            <p id="playlist-creator">
+              Rema & Selena Gomez are on top of the...
+            </p>
+          </a>
 
-          <div class="item">
+          <a
+            class="item playlist-card"
+            data-playlist-name="sad rap"
+            data-playlist-creator="amin"
+            data-playlist-pic="/assets/images/the last peace of art3.jpg  "
+            href="./playlistBeforeLogin.html"
+          >
             <img
-              src="https://i.scdn.co/image/ab67616d0000b2733b5e11ca1b063583df9492db"
+              class="playlist-image"
+              src="assets/images/the last peace of art.png"
             />
             <div class="play">
               <span class="fa fa-play"></span>
             </div>
-            <h4>Feel-Good Indie Rock</h4>
-            <p>The best indie rock vibes - classic and...</p>
-          </div>
-
-          <div class="item">
-            <img
-              src="https://i.scdn.co/image/ab67616d0000b2733b5e11ca1b063583df9492db"
-            />
-            <div class="play">
-              <span class="fa fa-play"></span>
-            </div>
-            <h4>idk.</h4>
-            <p>idk.</p>
-          </div>
+            <h4 class="album-title" id="playlist-name">
+              Today's Top Hits <span id="count"></span>
+            </h4>
+            <p id="playlist-creator">
+              Rema & Selena Gomez are on top of the...
+            </p>
+          </a>
         </div>
-
-        <hr />
       </div>
 
       <div class="preview">
