add user ui and backend after login and allow user , artist upload there image

--- a/Frontend/Spotify Clone/album.html
+++ b/Frontend/Spotify Clone/album.html
@@ -30,6 +30,14 @@
     <link rel="stylesheet" href="styles/album.css" />
   </head>
   <body>
+    <div id="myModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <p>You must log in or Sign Up first</p>
+        <button id="loginBtn"><a href="Login.html">Login</a></button>
+        <button id="signupBtn"><a href="SignUp.html">Sign Up</a></button>
+      </div>
+    </div>
     <div class="sidebar">
       <div class="logo">
         <a href="#">
@@ -127,10 +135,10 @@
         <div class="navbar">
           <ul>
             <li>
-              <a href="#">Sign Up</a>
+              <a href="SignUp.html">Sign Up</a>
             </li>
           </ul>
-          <button type="button">Log In</button>
+          <button type="button"><a href="Login.html">Log in</a></button>
         </div>
       </div>
 
@@ -166,10 +174,10 @@
           <div class="track">
             <div class="track-icons">
               <div class="play">
-                <span class="fa fa-play"></span>
+                <span class="fa fa-play" id="playicon"></span>
               </div>
-              <i class="fa-regular fa-heart"></i>
-              <i class="fa-solid fa-ellipsis"></i>
+              <i class="fa-regular fa-heart" id="hearticon"></i>
+              <i class="fa-solid fa-ellipsis" id="ellipsisicon"></i>
             </div>
             <div class="track-icons">
                 <i class="fa-solid fa-list-ul"></i>
