--- a/Frontend/Spotify Clone/index.html
+++ b/Frontend/Spotify Clone/index.html
@@ -29,7 +29,9 @@
     <link rel="stylesheet" href="styles/global.css" />
     <link rel="stylesheet" href="styles/index.css" />
   </head>
+
   <body>
+
     <div class="sidebar">
       <div class="logo">
         <a href="#">
@@ -432,7 +434,7 @@
           </p>
         </div>
         <div class="button">
-          <button type="button">Sign up free</button>
+          <button type="button"><a href="/SignUp.html">Sign up free</a></button>
         </div>
       </div>
     </div>
