retrieve the images and the audio form database and make the code more simple

--- a/Frontend/Spotify Clone/album.html
+++ b/Frontend/Spotify Clone/album.html
@@ -187,8 +187,10 @@
                 src="./assets/images/item-1.jpg"
                 alt="Artist image"
               />
-              <a class="artist-name" id="artist-name" href="">marawan pablo .</a>
-              <p class="album-songs"><span  id="album-songs"></span></p>
+              <a class="artist-name" id="artist-name" href=""
+                >marawan pablo .</a
+              >
+              <p class="album-songs"><span id="album-songs"></span></p>
               <p class="album-otal-time">22hr, 32 m</p>
             </div>
           </div>
@@ -204,35 +206,35 @@
               <i class="fa-solid fa-ellipsis" id="ellipsisicon"></i>
             </div>
             <div class="track-icons">
-                <i class="fa-solid fa-list-ul"></i>
+              <i class="fa-solid fa-list-ul"></i>
             </div>
           </div>
-          <hr>
+          <hr />
           <ol type="1" id="albumSongs">
             <li>
-                <span class="song-title">AMAN (Intro) <br>
-                  <span class="artistName">marawan Pablo</span>
-                </span>
-                <span class="duration">
-                  <i class="fa-regular fa-heart"></i>
-                  <span class="time">2:58</span>
-                  <i class="fa-solid fa-ellipsis"></i>
-                </span>
+              <span class="song-title"
+                >AMAN (Intro) <br />
+                <span class="artistName">marawan Pablo</span>
+              </span>
+              <span class="duration">
+                <i class="fa-regular fa-heart"></i>
+                <span class="time">2:58</span>
+                <i class="fa-solid fa-ellipsis"></i>
+              </span>
             </li>
             <li>
-                <span class="song-title">Daheya <br>
-                  <span class="artistName">marawan Pablo</span>
-                </span>
-                <span class="duration">
-                  <i class="fa-regular fa-heart"></i>
-                  <span class="time">2:40</span>
-                  <i class="fa-solid fa-ellipsis"></i>
-                </span>
+              <span class="song-title"
+                >Daheya <br />
+                <span class="artistName">marawan Pablo</span>
+              </span>
+              <span class="duration">
+                <i class="fa-regular fa-heart"></i>
+                <span class="time">2:40</span>
+                <i class="fa-solid fa-ellipsis"></i>
+              </span>
             </li>
             <!-- Add other songs here -->
-        </ol>
-
-        
+          </ol>
         </div>
       </div>
     </div>
