--- a/Frontend/Spotify Clone/artist/artistRegister.html
+++ b/Frontend/Spotify Clone/artist/artistRegister.html
@@ -37,8 +37,8 @@
             <label>Email address</label>
             <input type="email" placeholder="name@domain.com" id="email" />
             <span class="email-error"></span>
-            <label for="profileImage">Profile Image</label>
-            <input type="file" id="profileImage" name="profileImage" accept=".png, .jpeg, .jpg, .avif" required>
+            <label for="ArtistImage">Profile Image</label>
+            <input type="file" id="ArtistImage" name="ArtistImage" accept=".png, .jpeg, .jpg, .avif" required>
 
             <button>Contact</button>
             <div class="haveaccount">
