--- a/Frontend/Spotify Clone/playlistBeforeLogin.html
+++ b/Frontend/Spotify Clone/playlistBeforeLogin.html
@@ -181,7 +181,7 @@
             <p>playlist</p>
             <h1 class="album-title" id="playlistName2">Name Here</h1>
             <div class="album-info">
-              <a class="artist-name" href="" id="username">marawan pablo.</a>
+              <a class="artist-name" href="" id="username">marawan pablo. - </a>
               <p id="numSongs">0</p>
             </div>
           </div>
