retrieve the audio in UI and the user can display any of them

--- a/Frontend/Spotify Clone/artistAfterlogin.html
+++ b/Frontend/Spotify Clone/artistAfterlogin.html
@@ -272,20 +272,21 @@
         </div>
       </div>
     </div>
-    <!-- <div class="music-player">
+    <div class="music-player">
       <div class="song-bar">
         <div class="song-infos">
           <div class="image-container">
             <img
-              src="https://d2y6mqrpjbqoe6.cloudfront.net/image/upload/f_auto,q_auto/media/library-400/216_636967437355378335Your_Lie_Small_hq.jpg"
+              id="song-image"
+              src="/assets/images/the last peace of art.png"
               alt=""
             />
           </div>
           <div class="song-description">
-            <p class="title">
+            <p id="Song-name" class="title">
               Watashitachi wa Sou Yatte Ikite Iku Jinshu na no
             </p>
-            <p class="artist">Masaru Yokoyama</p>
+            <p id="song-artist" class="artist">Masaru Yokoyama</p>
           </div>
         </div>
         <div class="icons">
@@ -318,7 +319,7 @@
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <!-- <div class="test-container">
       <h1 id="songName22"></h1>
