--- a/Frontend/Spotify Clone/playlist.html
+++ b/Frontend/Spotify Clone/playlist.html
@@ -153,7 +153,7 @@
           </ul>
           <ul>
             <li>
-              <p id="username" class="username">username</p>
+              <p id="username2" class="username">username</p>
             </li>
           </ul>
         </div>
@@ -238,15 +238,16 @@
         <div class="song-infos">
           <div class="image-container">
             <img
-              src="https://d2y6mqrpjbqoe6.cloudfront.net/image/upload/f_auto,q_auto/media/library-400/216_636967437355378335Your_Lie_Small_hq.jpg"
+              id="song-image"
+              src="/assets/images/the last peace of art.png"
               alt=""
             />
           </div>
           <div class="song-description">
-            <p class="title">
+            <p id="Song-name" class="title">
               Watashitachi wa Sou Yatte Ikite Iku Jinshu na no
             </p>
-            <p class="artist">Masaru Yokoyama</p>
+            <p id="song-artist" class="artist">Masaru Yokoyama</p>
           </div>
         </div>
         <div class="icons">
