allow user to like and unlike (song , playlist , album) and can follow and unfollow the artist

--- a/Frontend/Spotify Clone/albumAfterLogin.html
+++ b/Frontend/Spotify Clone/albumAfterLogin.html
@@ -195,7 +195,14 @@
               <div class="play">
                 <span class="fa fa-play" id="playicon"></span>
               </div>
-              <i class="fa-regular fa-heart" id="hearticon"></i>
+              <i
+                class="fa-solid fa-circle-check"
+                style="color: #1db954; display: none"
+                id="unlikealbum"
+              ></i>
+              <!-- <i class="fa-regular fa-heart" id="hearticon"></i> -->
+              <i class="fa-solid fa-circle-plus" id="hearticon"></i>
+
               <i class="fa-solid fa-ellipsis" id="ellipsisicon"></i>
             </div>
             <div class="track-icons">
@@ -210,7 +217,11 @@
                 <span class="artistName">marawan Pablo</span>
               </span>
               <span class="duration">
-                <i class="fa-regular fa-heart"></i>
+                <i
+                  class="fa-regular fa-heart"
+                  id="likesong"
+                  data-songname="AMAN (Intro)"
+                ></i>
                 <span class="time">2:58</span>
                 <i class="fa-solid fa-ellipsis"></i>
               </span>
@@ -221,7 +232,11 @@
                 <span class="artistName">marawan Pablo</span>
               </span>
               <span class="duration">
-                <i class="fa-regular fa-heart"></i>
+                <i
+                  class="fa-regular fa-heart"
+                  id="likesong"
+                  data-songname="Daheya"
+                ></i>
                 <span class="time">2:40</span>
                 <i class="fa-solid fa-ellipsis"></i>
               </span>
@@ -249,7 +264,12 @@
           </div>
         </div>
         <div class="icons">
-          <i class="fa-solid fa-circle-plus"></i>
+          <i
+            class="fa-solid fa-circle-check"
+            style="color: #1db954; display: none"
+            id="unlikesongg"
+          ></i>
+          <i class="fa-solid fa-circle-plus" id="likesongg"></i>
         </div>
       </div>
       <div class="progress-controller">
