--- a/Frontend/Spotify Clone/playlist.html
+++ b/Frontend/Spotify Clone/playlist.html
@@ -186,7 +186,13 @@
               <div class="play">
                 <span class="fa fa-play"></span>
               </div>
-              <i class="fa-regular fa-heart" id="likeBtn"></i>
+              <i
+                class="fa-solid fa-circle-check"
+                style="color: #1db954; display: none"
+                id="unlikeplaylist"
+              ></i>
+              <!-- <i class="fa-regular fa-heart" id="likeBtn"></i> -->
+              <i class="fa-solid fa-circle-plus" id="likeBtn"></i>
               <i class="fa-solid fa-ellipsis"></i>
             </div>
             <div class="track-icons">
@@ -251,7 +257,12 @@
           </div>
         </div>
         <div class="icons">
-          <i class="fa-solid fa-circle-plus"></i>
+          <i
+            class="fa-solid fa-circle-check"
+            style="color: #1db954; display: none"
+            id="unlikesongg"
+          ></i>
+          <i class="fa-solid fa-circle-plus" id="likesongg"></i>
         </div>
       </div>
       <div class="progress-controller">
