--- a/Frontend/Spotify Clone/album.html
+++ b/Frontend/Spotify Clone/album.html
@@ -202,7 +202,10 @@
               <div class="play">
                 <span class="fa fa-play" id="playicon"></span>
               </div>
-              <i class="fa-regular fa-heart" id="hearticon"></i>
+              <!-- <i class="fa-regular fa-heart" id="hearticon"></i> -->
+              
+              <i class="fa-solid fa-circle-plus" id="hearticon"></i>
+
               <i class="fa-solid fa-ellipsis" id="ellipsisicon"></i>
             </div>
             <div class="track-icons">
