--- a/Frontend/Spotify Clone/artistAfterlogin.html
+++ b/Frontend/Spotify Clone/artistAfterlogin.html
@@ -290,7 +290,12 @@
           </div>
         </div>
         <div class="icons">
-          <i class="fa-solid fa-circle-plus"></i>
+          <i
+            class="fa-solid fa-circle-check"
+            style="color: #1db954; display: none"
+            id="unlikesongg"
+          ></i>
+          <i class="fa-solid fa-circle-plus" id="likesongg"></i>
         </div>
       </div>
       <div class="progress-controller">
@@ -320,32 +325,6 @@
         </div>
       </div>
     </div>
-
-    <!-- <div class="test-container">
-      <h1 id="songName22"></h1>
-      <p id="artistName22"></p>
-      <img id="songImag22e" alt="Song Image" />
-      <audio id="songAudio22" controls></audio>
-    </div> -->
-    <!-- <div class="player-container">
-      <div class="player-header">
-        <img id="albumArt" class="album-art" src="" alt="Album Art" />
-        <div class="player-info">
-          <h2 id="songTitle">Song Title</h2>
-          <p id="artistName">Artist Name</p>
-        </div>
-      </div>
-      <div class="player-controls">
-        <button id="prevButton" class="control-button">Prev</button>
-        <button id="playButton" class="control-button">Play</button>
-        <button id="nextButton" class="control-button">Next</button>
-      </div>
-      <div class="progress-container">
-        <input type="range" id="progressBar" value="0" max="100" />
-        <span id="currentTime">0:00</span> / <span id="duration">0:00</span>
-      </div>
-      <audio id="audioPlayer" src=""></audio>
-    </div> -->
 
     <script
       src="https://kit.fontawesome.com/408aac1832.js"
